k8s/clusters/glug-infra/caldiy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: caldiy
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
